<?xml version="1.0"?>
<package format="2">
  <name>differential_gt</name>
  <version>0.0.0</version>
  <description>The gt_coop_mpc package</description>

  <maintainer email="abel@todo.todo">abel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
